--- a/src/views/auth/acceder.hbs
+++ b/src/views/auth/acceder.hbs
@@ -15,7 +15,7 @@
                     <div class="form-group">
                         <input class="form-control fs-4" type="password" name="password" placeholder="Contraseña">
                         <div class="mt-2 text-end">
-                            <a class="fs-5" href="#">¿Olvidaste tu contraseña?</a>
+                            {{!-- <a class="fs-5" href="#">¿Olvidaste tu contraseña?</a> --}}
                         </div>
                     </div>
                     <button class="btn btn-bg fs-4 fw-bold">Acceder</button>
