--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="mt-auto py-3 bg-black text-center">
+<footer class="mt-auto py-3 bg-black text-center d-print-none">
     <i class="fas fa-copyright"></i>
     <span id="currentYear" class="copy text-white text-muted"></span>
 </footer>
