--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark p-2 bg-black">
+<link rel="stylesheet" href="/css/print.css" media="print">
+
+<nav class="navbar navbar-expand-lg navbar-dark p-2 bg-black d-print-none w-100">
     <div class="container justify-content-center">
         <a class="navbar-brand fs-2 fw-bold text-uppercase" href="/">
             <img src="/img/logo.png" alt="Event Logo" width="60" loading='lazy' class="img-fluid me-4">{{siteName}}</a>
