--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -21,7 +21,7 @@
                             {{/each}}
                             {{else}}
                             <option value="" disabled selected>Selecciona uno</option>
-                            {{#each proveedorDefaultTypes}}
+                            {{#each categoryDefault}}
                             <option value="{{this}}">{{this}}</option>
                             {{/each}}
                             {{/if}}
