--- a/src/views/auth/registrar.hbs
+++ b/src/views/auth/registrar.hbs
@@ -10,7 +10,8 @@
             <div class="card-body">
                 <form action="/auth/registrar" method="POST">
                     <div class="form-group">
-                        <input class="form-control fs-4" type="text" name="name" placeholder="Nombre" value="{{name}}">
+                        <input class="form-control fs-4" type="text" name="name" placeholder="Nombre Y Apellido"
+                            value="{{name}}">
                     </div>
                     <div class="form-group">
                         <input class="form-control fs-4" type="email" name="email" placeholder="Correo"
