--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -24,7 +24,7 @@
             <div class="col-12 col-md-5">
                 <label for="searchInput" class="form-label fw-bold">Buscar:</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput" placeholder="Buscar Evento..." />
+                    <input type="text" class="form-control" id="searchInput" placeholder="Buscar..." />
                 </div>
             </div>
         </div>
@@ -88,5 +88,6 @@
 {{/if}}
 </div>
 
+{{!-- jquery --}}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/filterPresupuesto.js"></script>
