--- a/src/views/presupuesto/dashboard.hbs
+++ b/src/views/presupuesto/dashboard.hbs
@@ -1,3 +1,6 @@
+{{#if existPresupuesto}}
+<link rel="stylesheet" href="/css/dashboard.css">
+
 <div class="row mt-3">
     <div class="bg-white p-0">
         <h1 class="text-center fw-bold bg-dark text-white py-2 text-uppercase">DashboarD</h1>
@@ -38,10 +41,10 @@
 
             <div class="card-dashboard">
                 <div class="card-inner">
-                    <p class="text-primary">PAGADOS</p>
-                    <span class="material-icons-outlined text-green">payment</span>
+                    <p class="text-primary">NO PAGADOS</p>
+                    <span class="material-icons-outlined text-red">error_outline</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="pagadosValue">{{countPresupuesto.paid}}</span>
+                <span class="text-primary font-weight-bold" id="noPagadosValue">{{countPresupuesto.noPaid}}</span>
             </div>
 
             <div class="card-dashboard">
@@ -54,10 +57,10 @@
 
             <div class="card-dashboard">
                 <div class="card-inner">
-                    <p class="text-primary">NO PAGADOS</p>
-                    <span class="material-icons-outlined text-red">error_outline</span>
+                    <p class="text-primary">PAGADOS</p>
+                    <span class="material-icons-outlined text-green">payment</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="noPagadosValue">{{countPresupuesto.noPaid}}</span>
+                <span class="text-primary font-weight-bold" id="pagadosValue">{{countPresupuesto.paid}}</span>
             </div>
 
             <div class="card-dashboard">
@@ -83,5 +86,14 @@
     </div>
 </div>
 
-
 <script src="/js/dashboard.js"></script>
+{{else}}
+<div class="col-12 col-md-10 card my-2 py-5 mx-auto bg-dark">
+    <div class="card-body text-center">
+        <h1 class="display-4 fw-bold text-white">Aun no haz creado <br>un presupuesto</h1>
+        <p class="lead fs-3 text-white"></p>
+        <a href="/presupuesto/add" class="btn btn-primary p-4 text-white fw-bold fs-4 rounded">Crea uno
+            ahora!</a>
+    </div>
+</div>
+{{/if}}
