--- a/src/views/presupuesto/print-presupuesto.hbs
+++ b/src/views/presupuesto/print-presupuesto.hbs
@@ -125,9 +125,16 @@
                         </div>
                         <div class="d-print-none mt-4">
                             <div class="float-end">
-                                <a href="javascript:window.print()" class="btn btn-success me-1"><i
+                                <a href="javascript:window.print()" class="btn btn-success me-1">Imprimir <i
                                         class="fa fa-print"></i></a>
                             </div>
+                            <form action="/presupuesto/print/{{presupuesto._id}}" method="POST">
+                                <div class="float-end">
+                                    <button type="submit" class="btn btn-primary me-1">Copiar
+                                        <i class="fa fa-copy"></i>
+                                    </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
